istio/alb-https-example/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8443
      protocol: HTTPS
      name: https
    hosts:
      - '*'
    tls:
      mode: SIMPLE
      credentialName: tls-secret
